# html_form_struct

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE.md  LICENSE-MIT.md  README.md
.github/: FUNDING.yml
.github/workflows/: ci.yml  dependabot.yml  rustsec.yml
examples/: readme.html  readme.rs
html_form_struct_macro/: Cargo.toml
html_form_struct_macro/src/: lib.rs
src/: lib.rs
