[package]
name = "html_form_struct"
version = "0.1.0"
authors = ["Owen Walpole <owen@walpole.dev>"]
categories = ["parser-implementations", "web-programming"]
edition = "2024"
include = ["src/**", "Cargo.toml", "README.md", "LICENSE*"]
keywords = ["html", "form", "proc-macro", "serde"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/owenthewizard/html_form_struct"
rust-version = "1.85"
description = "Generate a struct from an HTML form."

[workspace]
resolver = "3"
members = ["html_form_struct_macro"]

[dependencies]
html_form_struct_macro = { version = "0.1.0", path = "html_form_struct_macro" }

[dev-dependencies]
fake = "4.4.0"
serde = { version = "1.0.228", features = ["derive"] }
